# Cloud-Migration-Tool

./: .gitignore  CMakeLists.txt  INSTALL.txt  LICENCE.txt  README.txt
CMakeScripts/: CompileDot.cmake  FindDot.cmake  FindDroplet.cmake  FindMenu.cmake
doc/: CMakeLists.txt  cloudmig-view.1  cloudmig.1  cloudmig_status.txt  execstream.dot  files_formats.txt  transfer_status.txt  viewer_protocol.txt
inc/: cloudmig.h.in  data.h  display_protocol.h  error.h  log.h  options.h  status.h  tool_instances.h  transfer_info.h  utils.h  viewer.h
inc/cloudmig/: cloudmig.h.in  display.h  error.h  options.h  status.h  status_bucket.h  status_digest.h  status_store.h  synced_dir.h  viewer.h
inc/viewer/: data.h  viewer.h
src/: CMakeLists.txt  create_status.c  delete_files.c  load_profiles.c  log.c  main.c  options.c  retrieve_status.c  status.c  transfer.c  utils.c
src/cldmig/: CMakeLists.txt  create_status.c  delete_files.c  display.c  file_acl.c  file_transfer.c  load_config.c  load_profiles.c  log.c  main.c  options.c  retrieve_status.c  status.c  status_bucket.c  status_digest.c  status_store.c  synced_dir.c  transfer.c  transfer_info.c  utils.c  viewer.c
src/viewer/: CMakeLists.txt  display_status.c  init.c  instances_menu.c  main.c  tool_instances.c  view_instance.c
